<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/marginSize"
    android:background="@drawable/commit_item_select">

    <ImageView
        android:id="@+id/iv_icon_list"
        android:layout_width="@dimen/itemIconSize"
        android:layout_height="@dimen/itemIconSize"
        android:contentDescription="@string/todo"
        android:src="@mipmap/b1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/marginSize">

        <TextView
            android:id="@+id/tv_name_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/file_name"
            android:textColor="#000000"
            android:textSize="@dimen/titleSize"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_author_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#111111"
            android:textSize="@dimen/infoSize"
            android:text="@string/file_date"/>


    </LinearLayout>


    <ImageView
        android:id="@+id/iv_conform"
        android:layout_width="@dimen/itemPlaySize"
        android:layout_height="@dimen/itemPlaySize"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/marginSize"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_check_24dp" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="@dimen/itemPlaySize"
        android:layout_height="@dimen/itemPlaySize"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/marginSize"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_false" />


</LinearLayout>